--- a/.github/workflows/autodeploy.yaml
+++ b/.github/workflows/autodeploy.yaml
@@ -17,7 +17,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/test-project
-            git fetch origin
-            git reset --hard origin/main
+            git pull
             sudo systemctl daemon-reload
             sudo systemctl restart test-script.service  
